# Luciel

./: .dockerignore  .env.example  .gitignore  ARC16_ALIGNMENT_REPORT.md  ARC16_SYSTEM_STATE_AUDIT.md  ARC17_LOOKUP_RECORD_AMENDMENT.md  DOCTRINE_ANCHORS.toml  DOCTRINE_CHANGELOG.md  Dockerfile  README.md  RESCAN_AUDIT_MANIFEST.md  alembic.ini  backend-td-rev17.json  backend-td-rev18.json  backend-td-rev19.json  backend-td-rev20.json  backend-td-rev21.json  backend-td-rev22.json  backend-td-rev23.json  backend-td-rev24.json  backend-td-rev25.json  backend-td-rev26.json  backend-td-rev27.json  backend-td-rev28.json  diag_p13_repro.py  docker-compose.yml  ecs-service.json  migrate-td-rev11.json  migrate-td-rev12.json  migrate-td-rev13.json  mint-td-rev1.json  mint-td-rev2.json  mint-td-rev3.json  mint-td-rev4.json  msg.txt  prod-ops-td-rev1.json  pyproject.toml  recon-network.json  recon-q1-overrides.json  recon-td-rev1.json  (+32 more)
.github/: branch-protection.md
_arc11/: CLEANUP_CANDIDATES.md  DECISIONS.md  DRIFT_FROM_DOCTRINE.md  PRODUCTION_DEPLOY_CHECKLIST.md  SECURITY_FOLLOWUPS.md
_arc9/: C1_audit_findings.md  C1_audit_matrix.md  C1_audit_raw.json  C4_service_audit.md  c1_audit.py
alembic/: env.py
app/: __init__.py  main.py
arc12_specs/: 00_ARC12_MASTER.md  01_WORKUNITS.md  02_EXCISION_PLAN.md  03_TOOL_UI_SPEC.md  ARC12_CLOSEOUT.md  ARC12_FINAL_VERIFICATION.md  CLOSEOUT_GAPLIST.md  DOC_RECONCILIATION.md  EX_RESIDUAL_MAP.md  WU14_INFRA_FINDINGS.md
arc3-out/: A2a-findings.md  B1-admin-password-rotation-record.md  B2-5-deploy-smoke-record.md  B2-6-cutover-record.md  B2-kid-rolling-design.md  B3-ses-iam-no-op-record.md  B4-ses-sandbox-exit-request.md  B5-deploy-ceremony-record.md  C-tier-provisioning-email-validator-record.md
arc4-out/: A-tenancy-collapse-arc-record.md  A-tier-matrix-detail.md
arc5-out/: A-arc5-arc4-plan-defects.md  A-arc5-commit5-smoke-protocol.md  A-arc5-preflight.md  B8-path-a-subagent-spec.md  _arc5_schema_survey.py
arc6-out/: A-arc6-preflight.md  B-arc6-numeric-lock.md  C-arc6-stripe-poststate.json  C-arc6-stripe-prestate.json  C-arc6-stripe-wipe-record.md  D-arc6-admin-widget-domains-design-decisions.md  E-arc6-stripe-mint-poststate.json  E-arc6-stripe-mint-record.md
arc7-out/: arc7-c2-s7-probe-script.py  arc7-commit1-slice2-slice3-handoff.md  arc7-commit1-slice2-stripe-mint-poststate.json  arc7-commit1-slice2-stripe-mint-record.md  arc7-commit2-billing-model-retirement-record.md  arc7-commit2-prod-deploy-record.md  arc7-commit4-prod-deploy-record.md  arc7-commit5-leads-cap-retirement-record.md  arc7-commit6-prod-deploy-record.md  arc7-commit9-ops-runbook.md  arc7_c6_schema_probe.py
arc8-out/: A-arc8-security-hardening-arc-record.md  B-wu6-phase-c-deploy-runbook.md  arc8-c4-smoke-probe-taskdef.json  arc8-commit1-prod-deploy-record.md  arc8-commit2-prod-deploy-record.md  arc8-commit3-prod-deploy-record.md  arc8-commit4-prod-deploy-record.md  arc8-commit5-partner-console-packet.md  arc8-commit6-e2e-test-plan.md
arc9-out/: A-arc9-doctrine-reanchor-arc-record.md  WU-9.2-roadmap-trim-proposal.md
cfn/: knowledge-bucket.yaml  luciel-prod-alarms.yaml  luciel-prod-worker-autoscaling.yaml  luciel-sandbox-agent-policy.yaml  luciel-ses-inbound.yaml  luciel-twilio-webhook-routing.yaml  luciel-verify-task-role.yaml  luciel-widget-cdn.yaml
docs/: ARCHITECTURE.md  CANONICAL_RECAP.md  DISCLOSURES.md  DRIFTS.md  DRIFT_REGISTER.md  E2E_USER_STORIES.md  INFRA_TEARDOWN.md  PHASE_3_COMPLIANCE_BACKLOG.md  REBUILD_MANIFEST.md  RECOVERY_REFERENCE.md  STEP_29Y_DEFERRED.md  STEP_29_AUDIT.md  VANTAGEMIND_ARCHITECTURE_v1.md  VANTAGEMIND_ARCHITECTURE_v1_FINAL.md  VANTAGEMIND_CUSTOMER_JOURNEY_v1.md  VANTAGEMIND_CUSTOMER_JOURNEY_v1_FINAL.md  VANTAGEMIND_VISION_v1.md  VANTAGEMIND_VISION_v1_FINAL.md  identity_bootstrap.md
iam/: LucielSESSendEmail-post-patch-2026-05-22.json  luciel-ecs-verify-role-permissions.json
ops/: arc13_golive_runbook.md
recovery/: FINAL_SNAPSHOT_NAME.txt  alb.json  ecs-cluster.json  ecs-services.json  elastic-ips.json  igw.json  listeners.json  rds-instance.json  rds-subnet-group.json  redis-cluster.json  redis-replication-group.json  redis-subnet-groups.json  route-tables.json  security-groups.json  sns-topics.json  ssm-parameter-inventory.json  subnets.json  target-groups.json  vpc-endpoints.json  vpc.json
scripts/: _arc6_load_stripe_env.sh  _arc6_stripe_archive_v1.py  _arc6_stripe_enumerate_prestate.py  _arc6_stripe_mint_poststate_regen.py  _arc6_stripe_mint_v2.py  _arc7_stripe_mint_enterprise_symmetry.py  apply_branch_protection.sh  arc11_close_audit.py  (+50 more)
(+928 files in other folders)
