[project]
name = "luciel-backend"
version = "0.1.0"
description = "Luciel Core MVP backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.32",
    "psycopg[binary]>=3.2.10",
    "alembic>=1.13.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "pgvector>=0.3.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12.3",
    "markdown>=3.6",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",
    "celery[redis]>=5.3.0,<6.0",
    "kombu[sqs]>=5.3.0,<6.0",
    "reportlab>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]