[project]
name = "luciel-backend"
version = "0.1.0"
description = "Luciel Core MVP backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.32",
    "psycopg[binary]>=3.2.10",
    "alembic>=1.13.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "pgvector>=0.3.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12.3",
    "markdown>=3.6",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",
    "celery[redis]>=5.3.0,<6.0",
    "kombu[sqs]>=5.3.0,<6.0",
    "reportlab>=4.0.0",
    # Step 30a -- self-serve subscription billing. Stripe-hosted Checkout +
    # Customer Portal. The library is import-only safe (no network at
    # import time), so adding it does not change cold-start behavior.
    # Pinned upper bound: Stripe SDK 13.x renamed ``to_dict_recursive`` to
    # ``_to_dict_recursive`` (underscored). Step 30a.2-pilot Commit 3e
    # neutralises that via ``json.loads(str(event))``, but we still cap
    # below the next major so a future API rename cannot silently bite us.
    # D-stripe-sdk-major-pin-2026-05-15.
    "stripe>=10.0.0,<16",
    # Step 30a -- HS256-signed magic-link tokens for the post-checkout
    # email-only login flow. PyJWT is the standard, well-audited choice;
    # we use exclusively HS256 with a server-side shared secret (see
    # app/services/magic_link_service.py).
    "pyjwt>=2.8.0",
    # Step 30a.3 -- password authentication. argon2-cffi is the reference
    # binding for the Argon2 hash family, with argon2id as the OWASP-recommended
    # variant (memory-hard, side-channel resistant). The library exposes a
    # PasswordHasher class with sensible defaults (m=65536, t=3, p=4) that
    # we use unchanged at v1; see app/services/auth_service.py for the
    # hash/verify discipline. We deliberately do NOT use bcrypt -- bcrypt's
    # 72-byte password truncation is a footgun and its iteration count is
    # the only knob, whereas argon2id has independent memory and time
    # parameters that adapt to commodity GPU advances without library
    # changes. The argon2-cffi wheel is built against libargon2 and is
    # widely-deployed (Django, Flask-Security, FastAPI-Users all default
    # to it). Pinned with a permissive floor.
    "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]